feat: complete the exercise
All odd numbered elements: a light red/pink background, and a list of fonts containing Verdana and DejaVu Sans with sans-serif as a fallback
The second element: blue text and a font size of 36px
The third element: in addition to the styles for all odd numbered elements, add a font size of 24px
The fourth element: a light green background, a font size of 24px, and bold

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,18 @@
-/* Add CSS Styling */
+.pinkish-class {
+    background-color: #f8b1bd;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+#the-blue-text {
+    color:#0101f9;
+    font-size: 36px;
+}
+
+#the-green-text {
+    background-color: #90ee90;
+    font-weight: bold;
+}
+
+.smaller-font {
+    font-size: 24px;
+}
