feat: complete the exercise
The first element: a black background and white text
The second element: a yellow background
Both elements: a font size of 28px and a list of fonts containing Helvetica and Times New Roman, with sans-serif as a fallback

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,15 @@
-/* Add CSS Styling */
+.left-button {
+    background-color: black;
+    color: white;
+}
+
+.right-button {
+    background-color: yellow;
+    color: black;
+}
+
+.left-button,
+.right-button {
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+    font-size: 28px;
+}
